--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,4 @@
 *.asv
 /lab3/Apps/*
-/lab3/build_thirdparty.sh
-/lab3/build_SLAM.sh
-/lab3/Data/*
-/lab3/Evaluation/*
-/lab3/Thirdparty/*
+/lab3/build/*
+/lab3/cmake-build-debug/*
