Taks 2 and 3, seem to work, had to change new keyframe condition though (could still be improved)

--- a/lab4/CMakeLists.txt
+++ b/lab4/CMakeLists.txt
@@ -5,7 +5,7 @@ project(Mini-SLAM)
 #Build type:
 #   -Set to RELEASE to benchmark your code
 #   -Set to DEBUG to debug your code
-set(CMAKE_BUILD_TYPE DEBUG)
+set(CMAKE_BUILD_TYPE RELEASE)
 
 set_property(GLOBAL PROPERTY USE_FOLDERS ON)
 
